--- a/app/src/main/res/layout/fragment_agenda.xml
+++ b/app/src/main/res/layout/fragment_agenda.xml
@@ -6,18 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".ui.agenda.AgendaFragment">
 
-    <TextView
-        android:id="@+id/text_agenda"
+    <com.baoyz.swipemenulistview.SwipeMenuListView
+        android:id="@+id/listViewAgenda"
         android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAgenda"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:tint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:srcCompat="@drawable/ic_add_black_24dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
