--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -7,12 +7,12 @@
     tools:context=".ui.todo.TodoFragment">
 
     <com.baoyz.swipemenulistview.SwipeMenuListView
-        android:id="@+id/listView"
+        android:id="@+id/listViewAgenda"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fabAgenda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
